--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Arvydas Designs</h1>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Section</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
