--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
           <h1>Arvydas Designs</h1>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Section</a></li>
             <li><a href="#">Contacts</a></li>
