--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Section</a></li>
+          <li><a href="#">Article</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
