changed lorem text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <i class="fas fa-hotel fa-3x"></i>
           <h1>Great Location</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga,
+            Lorem ipsum color sit amet consectetur, adipisicing elit. Fuga,
             impedit!
           </p>
         </div>
