--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="offer-3">
           <i class="fas fa-dumbbell fa-3x"></i>
-          <h1>Great Location</h1>
+          <h1>Gym Facilities</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga,
             impedit!
